--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,6 @@
   </head>
   <body>
     <noscript>Morate omogućiti JavaScript kako bi videli sadržaj sajta.</noscript>
-    <div id="root"></div>
+    <div id="app"></div>
   </body>
 </html>
