--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <html lang="sr">
   <head>
     <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+    <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta http-equiv='cache-control' content='no-cache'>
     <title>Mačkator</title>
